<resources>
    <string name="app_name">mlight</string>
    <string name="action_settings">System Settings</string>
    <string name="error_info">Message from Mars</string>
    <string name="default_text">Little Prince</string>
    <string name="default_tobecontinued">mlight to be continued... Thank you~</string>
    <string name="splash_words">Really know you, Enjoy the new life.</string>
    <string name="timeearly_thannow_warning">Please select a correct time after this moment!</string>
    <string name="tv_save">save</string>
    <string name="save_succ">save successful</string>
    <string name="choose_call_reminder">Select a call reminder mode</string>
    <string name="choose_call_reminder_red">Red</string>
    <string name="choose_call_reminder_green">Green</string>
    <string name="choose_call_reminder_blue">Blue</string>
    <string name="choose_call_reminder_diy">Diy mode</string>
    <string name="unfinised_open_light_timer">open light timer is still running</string>
    <string name="finised_open_light_timer">open light timer has been finished</string>
    <string name="unfinised_close_light_timer">close light timer is still running</string>
    <string name="finised_close_light_timer">close light timer has been finished</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="colorpallet">Color Palette</string>
    <string name="colorpallet_description">Customize the color using a palette</string>
    <string name="warmnight">Warm Night</string>
    <string name="warmnight_description">A warm light to make you sleep well</string>
    <string name="sunmode">Sun Mode</string>
    <string name="sunmode_description">Show sunrise and sunset color</string>
    <string name="defaultmode">Default Mode</string>
    <string name="defaultmode_description">Show a series of color gradients</string>
    <string name="rgbwave">RGB Wave</string>
    <string name="rgbwave_description">Cycle through red, green and blue like breathing</string>
    <string name="diyshine">Diy Shine</string>
    <string name="diyshine_description">Design your own series of gradients</string>
    <string name="open_light_timer">Turn On At</string>
    <string name="close_light_timer">Turn Off After</string>
    <string name="cancel_open_light_timer">Cancel turn on at </string>
    <string name="light_timer_unit">Minutes</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="cyan">cyan</string>
    <string name="blue">blue</string>
    <string name="purple">purple</string>
    <string name="white">white</string>
    <string name="input_new_pwd">Please input new password!</string>
    <string name="input_new_lightname">Please input light new name!</string>
    <string name="group_device_detele">Delete</string>
    <string name="group_empty_info">Pull to Scanning</string>
    <string name="group_empty_on">Back to Stop</string>
    <string name="connect_device_title">My Device</string>
    <string name="connect_group_title">My Group</string>
    <string name="connect_personal_title">Personal Center</string>
    <string name="connect_select_tip">Please select the device</string>
    <string name="connect_dialog_title">Connect</string>
    <string name="connect_dialog_message">Connecting……</string>
    <string name="connect_toast_failed">Connect Failed</string>
    <string name="gradient_title">Gradient Ramp</string>
    <string name="stop_gap">Change Delay </string>
    <string name="gradient_gap">Color Gap </string>
    <string name="red_value">Red Value </string>
    <string name="green_value">Green Value </string>
    <string name="blue_value">Blue Value </string>
    <string name="color_selected">√ </string>
    <string name="color_notselected">X </string>
    <string name="change_gradient_delay">Change Gradient Delay(unit: second)</string>
    <string name="confirm_delay">Confirm </string>
    <string name="cancel_delay">Cancel </string>
    <string name="settings_delay_tip">Please input correct delay value! </string>
    <string name="wait_gradient_run">Please wait the gradient mission run! </string>
    <string name="gradient_model_saved">Gradient model to be continued... </string>
    <string name="hint_input_new">Please input delay value.(unit: second)</string>
    <string name="hint_value_saved">Current saved delay value: </string>
    <string name="drive_title">Contextual Mode</string>
    <string name="btn_on">ON</string>
    <string name="btn_off">OFF</string>
    <string name="frequency_strong">0 Fast</string>
    <string name="frequency_weak">Slow 512</string>
    <string name="frequency_gap">Frequency Gap </string>
    <string name="red_warning">Red Warning</string>
    <string name="green_clear">Green Light</string>
    <string name="blue_caution">Blue Caution</string>
    <string name="red_green">Red and Green</string>
    <string name="red_blue">Red and Blue</string>
    <string name="blue_green">Blue and Green</string>
    <string name="red_blue_green">Red, Blue and Green</string>
    <string name="label">MARK</string>
    <string name="label_unlabeled">UNMARK</string>
    <string name="notification_content_drivemode">Drive Mode</string>
    <string name="notification_content_GradientRamp">Gradient Ramp</string>
    <string name="notification_content_GradientRamp_Sun">Sun Mode</string>
    <string name="notification_content_GradientRamp_Rgb">RGB Wave</string>
    <string name="personal_feedback">Feedback</string>
    <string name="personal_about_app">About App</string>
    <string name="personal_about_us">About Us</string>
    <string name="personal_phone_func">Call Reminder</string>
    <string name="connect_null_title">What is the name of your device?</string>
    <string name="connect_null_info">Please click + select your device.</string>
    <string name="connect_listen_title">Your device is called:</string>
    <string name="connect_listen_info">Click the icon to connect or click + select new device.</string>
    <string name="connect_scanning_title">Scanning the device: </string>
    <string name="connect_scanning_info">Please wait. You can click the icon to stop.</string>
    <string name="connect_scanned_title">I can not find:</string>
    <string name="connect_scanned_info">You can click the icon to try again, or click + to select the device again.</string>
    <string name="connect_connecting_title">Connecting the device:</string>
    <string name="connect_connecting_info">Captain: Connecting. You can click the icon to stop.</string>
    <string name="connect_fail_title">Sorry, cannot connected:</string>
    <string name="connect_fail_info">Please click + to rescan. Check whether the device has been opened.</string>
    <string name="connect_connected_title">Connect success</string>
    <string name="connect_connected_info">Captain: connected successfully, you can enjoy the play.</string>
    <string name="dialog_title_connect">Disconnected from Magic Lamp</string>
    <string name="dialog_info_connect">You can reconnect or exit the program, please select.</string>
    <string name="dialog_exit_connect">Exit</string>
    <string name="dialog_retry_connect">Retry</string>
    <string name="dialog_title">Exit Warning</string>
    <string name="dialog_message">Are you sure to quit? A service is running in the background.</string>
    <string name="dialog_positive">Background Running</string>
    <string name="dialog_negative">Confirm to Quit</string>
    <string name="dialog_neutral">Cancel</string>
    <string name="exit_warning">Turn off Bluetooth to save power</string>
    <string name="exit_words">Welcome Back</string>
    <string name="exit_background">See you later</string>
    <string name="device_online">Online</string>
    <string name="device_offline">Offline</string>
    <string name="main_state_online">Device Online</string>
    <string name="main_state_offline">Device Offline</string>
    <string name="main_state_bond">Bond State Changed</string>
    <string name="main_state_bluetooth">Bluetooth State Changed</string>
    <string name="main_state_equipment">Equipment State Changed</string>
    <string name="soft_update_latest">Already latest version</string>
    <string name="soft_update_title">Software Update</string>
    <string name="soft_update_info">New version is ready, Update now?</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Update later</string>
    <string name="soft_updating">Software Updating...</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="soft_update_now">The current version is:</string>
    <string name="soft_update_net">The server version is:</string>
    <string name="soft_update_whether">Update now?</string>
    <string name="soft_upgrade_yes">New Version</string>
    <string name="soft_upgrade_no">Latest Version</string>
    <string name="soft_upgrade_check">Check</string>
    <string name="soft_upgrade_checking">Checking……</string>
    <string name="ticker_text">Background service of Magic Lamp</string>
    <string name="notification_title">Magic Lamp</string>
    <string name="notification_content_visualizer">Music Rhythm</string>
    <string name="notification_content_shake">Shaking</string>
    <string name="notification_info">Background service is running </string>
    <string name="notice_warning">Notice:The Music and Shake can not run at the same time.</string>
    <string name="bluetooth_title">Scan Devices</string>
    <string name="bluetooth_scanning">Scanning……</string>
    <string name="bluetooth_scan">Start Scanning</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_unpair">Cancel</string>
    <string name="main_brightness_weak">0 Dark</string>
    <string name="main_brightness_strong">255 Bright</string>
    <string name="main_brightness_tip">Current level </string>
    <string name="main_timer_weak">0 Minutes</string>
    <string name="main_timer_strong">60 Minutes</string>
    <string name="main_timer_tip_zero">Delay function closed.</string>
    <string name="main_timer_tip"> minutes later turn off.</string>
    <string name="scene_music">Music Rhythm</string>
    <string name="scene_shake">Shaking</string>
    <string name="scene_mode">Scene Mode </string>
    <string name="scene_pallet">Color Palette</string>
    <string name="scene_onoff">On Off</string>
    <string name="scene_gradient">Gradient Ramp</string>
    <string name="settings_shake">Shake</string>
    <string name="settings_camera">Selfie</string>
    <string name="about_upgrade">Check for Updates</string>
    <string name="about_describe">Scan QR code to share Magic Lamp with your friends.</string>
    <string name="about_software_version">Software Version V</string>
    <string name="about_firmware_version">Firmware Version V</string>
    <string name="shake_switch">Lamp Switch</string>
    <string name="shake_color">Random Color</string>
    <string name="shake_strong">0 Strong</string>
    <string name="shake_weak">Weak</string>
    <string name="shake_sensitive">Sensitive</string>
    <string name="selfie_open">Start Selfie</string>
    <string name="selfie_close">Stop Selfie</string>
    <string name="selfie_tip">Click the "Start Selfie"; mlight APP run in background"; Open the
        camera; Press the button of the mlight device. Note: selfie requires root permission.</string>
    <string name="dialog_show_title">Manage Devices</string>
    <string name="dialog_connect_all">Connect All</string>
    <string name="dialog_disconnect_all">Disconnect All</string>
    <string name="dialog_deselect_all">Deselect All</string>
    <string name="dialog_cancel_all">Cancel All</string>
</resources>