<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.guohua.mlight.view.widget.TitleView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/main"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:leftTitle="@string/dialog_cancel_all"
        app:rightIcon="@drawable/icon_add"
        app:titleText="@string/dialog_show_title" />

    <com.guohua.mlight.view.widget.swipemenulistview.SwipeMenuListView
        android:id="@+id/lv_devices_group_dialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/horizontal_padding"
        android:layout_marginRight="@dimen/horizontal_padding"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/main"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_open_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_connect_all"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_close_dialog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_disconnect_all"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
