<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greya"
    android:orientation="vertical"
    tools:context="com.guohua.mlight.view.activity.ShakeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main"
        android:paddingLeft="@dimen/horizontal_padding">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_shake"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_switch_shake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/greya"
            android:gravity="center"
            android:text="@string/shake_switch"
            android:textColor="@color/main" />

        <TextView
            android:id="@+id/tv_color_shake"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/shake_color"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_shake_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="100dp"
            android:src="@drawable/icon_shake_a_shake" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/shake_strong"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_current_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/shake_sensitive"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_show_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/shake_weak"
                android:textColor="@color/black" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/sb_threshold_shake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="512" />
    </LinearLayout>
</LinearLayout>
