<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greya"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main"
        android:paddingLeft="@dimen/horizontal_padding">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/icon_back"
            android:id="@+id/imageView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bluetooth_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_selectall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_deselect_all"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/icon_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_device_ble"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/horizontal_padding"
        android:layout_marginRight="@dimen/horizontal_padding"
        android:layout_weight="9"
        android:smoothScrollbar="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
            <Button
                android:id="@+id/button_scan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bluetooth_scan"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Button
                android:id="@+id/button_connect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bluetooth_connect"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>
