<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greya"
    android:orientation="vertical"
    tools:context="com.guohua.mlight.view.activity.AppActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main"
        android:paddingLeft="@dimen/horizontal_padding">

        <ImageView
            android:id="@+id/iv_back_about"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_about_app"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_name_about"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:src="@drawable/about_logo" />

            <TextView
                android:id="@+id/tv_name_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/content_margin"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_version_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_about"
                android:layout_centerHorizontal="true"
                android:text="@string/about_software_version"
                android:textColor="@color/greyd" />

            <TextView
                android:id="@+id/tv_firmware_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_version_about"
                android:layout_centerHorizontal="true"
                android:text="@string/about_firmware_version"
                android:textColor="@color/greyd" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about_upgrade"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_message_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="check"
            android:text="@string/soft_upgrade_check"
            android:textColor="@color/greyd" />

        <ImageView
            android:id="@+id/iv_upgrade_about"
            android:layout_width="@dimen/little_icon_size"
            android:layout_height="@dimen/little_icon_size"
            android:layout_marginLeft="@dimen/content_margin"
            android:adjustViewBounds="true"
            android:onClick="upgrade"
            android:src="@drawable/icon_forward_grey"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/qr_bg_size"
            android:layout_height="@dimen/qr_bg_size"
            android:layout_marginBottom="@dimen/content_margin"
            android:background="@drawable/icon_qr_bg"
            android:padding="@dimen/content_padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/erweima" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin"
            android:text="@string/about_describe"
            android:textColor="@color/greyd" />
    </LinearLayout>
</LinearLayout>
