<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greya"
    android:orientation="vertical"
    tools:context="com.guohua.mlight.view.activity.SelfieActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main"
        android:paddingLeft="@dimen/horizontal_padding">

        <ImageView
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_camera"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_margin"
                android:layout_marginLeft="@dimen/selfie_icon_margin"
                android:layout_marginRight="@dimen/selfie_icon_margin"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_selfie" />

            <TextView
                android:id="@+id/tv_go_selfie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selfie_tip"
                android:textColor="@color/main" />
        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_open_selfie"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/greya"
                android:gravity="center"
                android:text="@string/selfie_open"
                android:textColor="@color/main" />

            <TextView
                android:id="@+id/tv_close_selfie"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/selfie_close"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>