<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.guohua.mlight.view.activity.DriveModeActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:background="@color/main"
        android:paddingLeft="@dimen/horizontal_padding">

        <ImageView
            android:id="@+id/iv_back_drive"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:onClick="back"
            android:padding="@dimen/icon_padding"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/drive_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/timers_list_page"
        android:layout_below="@id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8.5"
        android:layout_marginBottom="0dip"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/smart_mode_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#55eeeeee"
            android:dividerHeight="1dip"
            android:scrollbars="none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#55eeeeee" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:paddingLeft="@dimen/content_padding"
            android:paddingRight="@dimen/content_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:text="@string/frequency_strong"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_show_freq_gap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/frequency_gap"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:text="@string/frequency_weak"
                android:textColor="@color/black" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/sb_drivemode_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="512" />
    </LinearLayout>

</LinearLayout>
